--- a/aland-portfolio/index.html
+++ b/aland-portfolio/index.html
@@ -8,6 +8,8 @@
 
     <!-- Inter font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
   </head>
   <body class="bg-black text-white font-sans">
     <div id="root"></div>
